projet4-microservices-simple/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: microservices-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    cert-manager.io/cluster-issuer: "letsencrypt-pd"

  spec:
    tls:
      - hosts:
        - app.mydomain.com
        secretName: app-tls-secret
    rules:
      - host: app.mydomain.com
        http: 
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: frontend-service
                  port:
                    number: 50
            - path: /api  
              pathType: Prefix
              backend: 
                service:
                  name: api-service
                  port: 
                    number: 80
